Fixed select appearance on safari (jhoover); Fixed select style on firefox (jhoover)

--- a/JavaScript/RSS_dashboard/public/css/custom.css
+++ b/JavaScript/RSS_dashboard/public/css/custom.css
@@ -34,6 +34,10 @@
 .label  {
   border-radius: 0;
 }
+select {
+  -webkit-appearance:none;
+  -moz-appearance:none;
+}
 .label-info {
   background-color: #5000BE;
 }
